CMake: Link OpenACC target via INTERFACE_LIBS
This avoid forcing the OpenACC compiler flags on upstream targets,
while propagating the necessary linker flags correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,8 +189,8 @@ foreach(prec ${precisions})
       TARGET ${LIBNAME}_${prec}
       SOURCES ${prec_srcs} $<TARGET_OBJECTS:${LIBNAME}>
       DEFINITIONS $<$<NOT:${fiat_FOUND}>:${FIELD_API_DEFINITIONS}>
-      PUBLIC_LIBS
-       $<${HAVE_ACC}:OpenACC::OpenACC_Fortran>
+      INTERFACE_LIBS
+         $<${HAVE_ACC}:OpenACC::OpenACC_Fortran>
       PRIVATE_LIBS
          $<${fiat_FOUND}:fiat>
          $<${fiat_FOUND}:parkind_${prec}>
