--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -84,6 +84,7 @@ list(APPEND TEST_FILES
         test_gang.F90
         test_get_device_data_wronly.F90
         test_host_mem_pool.F90
+				test_field_delete_on_null.F90
 	)
 
 #Place-holder for failing tests
