FIELD_STACK: initial implementation tested successfully on CPU

--- a/src/buffer/CMakeLists.txt
+++ b/src/buffer/CMakeLists.txt
@@ -8,8 +8,8 @@
 # nor does it submit to any jurisdiction.
 
 
-list( APPEND ranksuff_srcs _gang _factory_gang )
-list( APPEND non_ranksuff_srcs field_gang_module )
+list( APPEND ranksuff_srcs _gang _factory_gang _stack _stack_member _factory_stack)
+list( APPEND non_ranksuff_srcs field_gang_module field_stack_module)
 
 ## expand ranksuff sources
 field_api_expand_fypp_ranksuff(
