--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,7 +150,7 @@ endif()
 
 unset( ranksuff_srcs )
 ## preprocess fypp files
-list( APPEND ranksuff_srcs _shuffle _access _util _array _array_util _factory _gather _data)
+list( APPEND ranksuff_srcs _shuffle _access _util _array _array_util _factory _gather _data _stack _stack_member)
 if(HAVE_FIELD_GANG)
   list( APPEND ranksuff_srcs _gang )
 endif()
@@ -173,7 +173,7 @@ endforeach ()
 unset( non_ranksuff_srcs )
 list ( APPEND non_ranksuff_srcs dev_alloc_module field_factory_module field_access_module field_array_module field_module 
                       field_shuffle_module field_util_module field_array_util_module field_shuffle_type_module host_alloc_module
-                      field_gathscat_module field_gathscat_type_module)
+                      field_gathscat_module field_gathscat_type_module field_stack_module)
 if(HAVE_FIELD_GANG)
   list( APPEND non_ranksuff_srcs field_gang_module )
 endif()
@@ -194,7 +194,7 @@ if( HAVE_ACC )
   ecbuild_warn("OpenACC builds force static linking.")
 endif()
 
-list(APPEND prec_srcs field_module.F90 field_array_module.F90 field_array_util_module.F90 field_util_module.F90)
+list(APPEND prec_srcs field_module.F90 field_array_module.F90 field_array_util_module.F90 field_util_module.F90 field_stack_module.F90)
 list(REMOVE_ITEM srcs ${prec_srcs})
 
 ## build precision independent source files
