--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -79,8 +79,6 @@ list(APPEND TEST_FILES
         test_field1d.F90
         test_field_array.F90
         test_field_delete_on_null.F90
-        test_field_stack_cpu.F90
-        test_field_stack_gpu.F90
         test_get_device_data_wronly.F90
         test_host_mem_pool.F90
         test_lastdim.F90
@@ -93,7 +91,7 @@ list(APPEND TEST_FILES
 	)
 
 if(HAVE_FIELD_GANG)
-  list(APPEND TEST_FILES test_gang.F90)
+  list(APPEND TEST_FILES test_gang.F90 test_field_stack_cpu.F90 test_field_stack_gpu.F90)
 endif()
 
 #Place-holder for failing tests
