--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ ecbuild_add_option( FEATURE ACC
                     CONDITION CMAKE_Fortran_COMPILER_ID MATCHES "PGI|NVHPC")
 
 ## set general compiler flags
-include( field_api_compile_options )
+field_api_compile_options()
 
 ## choose to build dp or sp or both
 ecbuild_add_option( FEATURE SINGLE_PRECISION
@@ -75,8 +75,6 @@ endif()
 ## find fiat
 field_api_find_fiat_modules()
 
-list(APPEND srcs field_async_module.F90 field_basic_module.F90 field_defaults_module.F90 dev_alloc.c c_malloc.c field_constants_module.F90 field_abort_module.F90 field_statistics_module.F90 field_backtrace.c)
-
 ## check for CUDA
 include(CheckLanguage)
 check_language(CUDA)
@@ -97,8 +95,6 @@ ecbuild_add_option( FEATURE FIELD_GANG
     CONDITION (NOT CMAKE_Fortran_COMPILER_ID MATCHES "Cray")
 )
 
-check_symbol_exists(backtrace execinfo.h HAVE_BACKTRACE)
-
 ## fypp preprocessor flags
 if(HAVE_BUDDY_MALLOC)
   list( APPEND fypp_defines "-DUSE_BUDDY_MALLOC")
@@ -113,39 +109,8 @@ if(HAVE_FIELD_GANG)
   list( APPEND fypp_defines "-DHAVE_GANG")
 endif()
 
-unset( ranksuff_srcs )
-## preprocess fypp files
-list( APPEND ranksuff_srcs _shuffle _access _util _array _array_util _factory _gather _data)
-if(HAVE_FIELD_GANG)
-  list( APPEND ranksuff_srcs _gang )
-endif()
-
-## expand ranksuff sources
-field_api_expand_fypp_ranksuff(
-   PYTHON_MODULE_DIR      ${CMAKE_CURRENT_SOURCE_DIR}
-   SOURCE_DIR             ${CMAKE_CURRENT_SOURCE_DIR}
-   INPUT_SRCS             ${ranksuff_srcs}
-   OUTPUT_SRCS            srcs
-)
-
-unset( non_ranksuff_srcs )
-list ( APPEND non_ranksuff_srcs dev_alloc_module field_factory_module field_access_module field_array_module field_module 
-                      field_shuffle_module field_util_module field_array_util_module field_shuffle_type_module host_alloc_module
-                      field_gathscat_module field_gathscat_type_module)
-if(HAVE_FIELD_GANG)
-  list( APPEND non_ranksuff_srcs field_gang_module )
-endif()
-
-## expand non ranksuff sources
-field_api_expand_fypp(
-   PYTHON_MODULE_DIR      ${CMAKE_CURRENT_SOURCE_DIR}
-   SOURCE_DIR             ${CMAKE_CURRENT_SOURCE_DIR}
-   INPUT_SRCS             ${non_ranksuff_srcs}
-   OUTPUT_SRCS            srcs
-)
-
-set_source_files_properties("dev_alloc_module.F90" PROPERTIES COMPILE_OPTIONS $<${HAVE_CUDA}:-cuda>)
-set_source_files_properties("host_alloc_module.F90" PROPERTIES COMPILE_OPTIONS $<${HAVE_CUDA}:-cuda>)
+## build precision independent srcs
+add_subdirectory(src)
 
 ## determine lib type
 cmake_dependent_option(BUILD_SHARED_LIBS "Dynamically link field_api" ON "NOT HAVE_ACC" OFF)
@@ -153,44 +118,31 @@ if( HAVE_ACC )
   ecbuild_warn("OpenACC builds force static linking.")
 endif()
 
-list(APPEND prec_srcs field_module.F90 field_array_module.F90 field_array_util_module.F90 field_util_module.F90)
-list(REMOVE_ITEM srcs ${prec_srcs})
+## specify precision dependent sources that must be compiled twice
+list(APPEND prec_srcs
+    ${CMAKE_CURRENT_BINARY_DIR}/src/core/field_module.F90
+    ${CMAKE_CURRENT_BINARY_DIR}/src/util/field_array_module.F90
+    ${CMAKE_CURRENT_BINARY_DIR}/src/util/field_array_util_module.F90
+    ${CMAKE_CURRENT_BINARY_DIR}/src/util/field_util_module.F90)
 
-## build precision independent source files
-ecbuild_add_library(
-    TARGET ${LIBNAME}
-    TYPE OBJECT
-    SOURCES ${srcs}
-    DEFINITIONS $<$<NOT:${fiat_FOUND}>:${FIELD_API_DEFINITIONS}> $<${fiat_FOUND}:WITH_FIAT>
-    PRIVATE_LIBS
-       $<${HAVE_ACC}:OpenACC::OpenACC_Fortran>
-       $<${fiat_FOUND}:fiat>
-       $<${fiat_FOUND}:parkind_${DEFAULT_PRECISION}>
-       OpenMP::OpenMP_Fortran
-    )
-target_include_directories( ${LIBNAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-set_property(TARGET ${LIBNAME} PROPERTY C_STANDARD 99)
-set_target_properties( ${LIBNAME} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include/${LIBNAME} )
-target_link_options( ${LIBNAME} PRIVATE $<${HAVE_CUDA}:-cuda> )
-if( HAVE_BACKTRACE )
-    target_compile_definitions( ${LIBNAME} PRIVATE HAVE_BACKTRACE )
-endif()
-
-# set install location for .mod files
-install(DIRECTORY ${CMAKE_BINARY_DIR}/include/${LIBNAME} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
+## add field_api targets
 foreach(prec ${precisions})
-  ## add field_api target
   ecbuild_add_library(
       TARGET ${LIBNAME}_${prec}
-      SOURCES ${prec_srcs} $<TARGET_OBJECTS:${LIBNAME}>
+      SOURCES ${prec_srcs}
       DEFINITIONS $<$<NOT:${fiat_FOUND}>:${FIELD_API_DEFINITIONS}>
+      OBJECTS
+         field_api_core
+         field_api_debug
+         field_api_factory
+         field_api_util
+         field_api_shuffle
       PRIVATE_LIBS
          $<${fiat_FOUND}:fiat>
          $<${fiat_FOUND}:parkind_${prec}>
          OpenMP::OpenMP_Fortran
       )
-  target_include_directories( ${LIBNAME}_${prec} PRIVATE ${CMAKE_BINARY_DIR}/include/${LIBNAME})
+
   set_property(TARGET ${LIBNAME}_${prec} PROPERTY C_STANDARD 99)
   set_target_properties( ${LIBNAME}_${prec} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include/${LIBNAME}_${prec} )
   target_link_options( ${LIBNAME}_${prec} PUBLIC $<${HAVE_CUDA}:-cuda> )
@@ -203,9 +155,13 @@ foreach(prec ${precisions})
   target_include_directories( ${LIBNAME}_${prec}
                               INTERFACE $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include/${LIBNAME}_${prec}> 
                               INTERFACE $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${LIBNAME}_${prec}> 
-                              INTERFACE $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include/${LIBNAME}>
-                              INTERFACE $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${LIBNAME}>
                             )
+
+  # add sub-component module directories to target
+  field_api_target_add_module_dirs(
+    TARGET     ${LIBNAME}_${prec}
+    LIBS       field_api_debug field_api_core field_api_factory field_api_util field_api_shuffle
+  )
 
   if( prec MATCHES sp )
       target_compile_definitions( ${LIBNAME}_${prec} PRIVATE PARKIND1_SINGLE )
