Generalise offload related preproc definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ if(HAVE_BUDDY_MALLOC)
   list( APPEND fypp_defines "-DUSE_BUDDY_MALLOC")
 endif()
 if(HAVE_CUDA)
-  list( APPEND fypp_defines "-DCUDA")
+  list( APPEND fypp_defines "-DWITH_HIC")
 endif()
 if(fiat_FOUND)
   list( APPEND fypp_defines "-DWITH_FIAT")
