added tests for async blocked copies

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ list(APPEND TEST_FILES
         final_wrapper_gpu.F90
         gather_scatter.F90
         gather_scatter_lastdim.F90
+        get_device_data_multi_blk_async.F90
         get_dims.F90
         get_stats.F90
         get_view.F90
