--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,13 @@ ecbuild_add_option( FEATURE FIELD_GANG
     CONDITION (NOT CMAKE_Fortran_COMPILER_ID MATCHES "Cray")
 )
 
+## HDF5
+ecbuild_add_option( FEATURE HDF5
+    DESCRIPTION "Use HDF5 to read and write FieldAPI variables"
+    REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
+    DEFAULT OFF
+)
+
 ## fypp preprocessor flags
 if(HAVE_BUDDY_MALLOC)
   list( APPEND fypp_defines "-DUSE_BUDDY_MALLOC")
@@ -102,6 +109,11 @@ list(APPEND prec_srcs
     ${CMAKE_CURRENT_BINARY_DIR}/src/util/field_array_util_module.F90
     ${CMAKE_CURRENT_BINARY_DIR}/src/util/field_util_module.F90)
 
+if(HAVE_HDF5)
+list(APPEND prec_srcs
+    ${CMAKE_CURRENT_BINARY_DIR}/src/hdf5io/field_hdf5_module.F90)
+endif()
+
 list(APPEND obj_libs
         field_api_core
         field_api_debug
@@ -112,6 +124,10 @@ list(APPEND obj_libs
 
 if( HAVE_FIELD_GANG )
    list(APPEND obj_libs field_api_buffer)
+endif()
+
+if( HAVE_HDF5 )
+   list(APPEND obj_libs field_api_hdf5io)
 endif()
 
 ## add field_api targets
@@ -126,6 +142,9 @@ foreach(prec ${precisions})
          $<${fiat_FOUND}:fiat>
          $<${fiat_FOUND}:parkind_${prec}>
          OpenMP::OpenMP_Fortran
+          $<${HAVE_HDF5}:stdc++>
+      PUBLIC_LIBS
+          $<${HAVE_HDF5}:HDF5::HDF5>
       )
 
   set_property(TARGET ${LIBNAME}_${prec} PROPERTY C_STANDARD 99)
@@ -151,6 +170,13 @@ foreach(prec ${precisions})
     TARGET     ${LIBNAME}_${prec}
     LIBS       ${obj_libs}
   )
+
+if(HAVE_HDF5)
+  field_api_target_add_module_dirs(
+    TARGET     ${LIBNAME}_${prec}
+    LIBS       field_api_hdf5io
+  )
+endif()
 
   if( prec MATCHES sp )
       target_compile_definitions( ${LIBNAME}_${prec} PRIVATE PARKIND1_SINGLE )
