--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,6 @@ if( HAVE_FIELD_GANG )
 endif()
 add_subdirectory( util )
 add_subdirectory( shuffle )
+if( HAVE_HDF5 )
+  add_subdirectory( hdf5io )
+endif()
